Fixed resizing attribute

--- a/questions/imageAnnotate/question.html
+++ b/questions/imageAnnotate/question.html
@@ -41,14 +41,13 @@
       <code>height</code>, <code>font-size</code>, and <code>border-width</code> attributes.
       By default, all annotation rectangles are <code>resizable</code>, but this can be disabled.</p>
     </pl-question-panel>
-    <pl-image-annotate answer-name="q2" width="500" height="300">
+    <pl-image-annotate answer-name="q2" width="600" height="200">
       <pl-rectangle-annotate
         label="Red Annotation"
         key="red"
         color="red"
         width="100"
         height="100"
-        resizable="true"
       ></pl-rectangle-annotate>
       <pl-rectangle-annotate
         label="Non-resizable Blue Annotation"
@@ -84,7 +83,7 @@
     be set up to process annotated images automatically.
     </p>
     </pl-question-panel>
-    <pl-image-annotate answer-name="q3" width="500" height="300">
+    <pl-image-annotate answer-name="q3">
       <pl-rectangle-annotate
         label="Required Annotation"
         key="required"
