imageAnnotate_copy1: Modify question.html

--- a/questions/imageAnnotate_copy1/question.html
+++ b/questions/imageAnnotate_copy1/question.html
@@ -1,15 +1,10 @@
 <pl-question-panel>
-    Provide the name of two bones:
+    Provide the name of at least two bones:
 </pl-question-panel>
 
     <pl-image-annotate answer-name="q3">
       <pl-rectangle-annotate
-        label="Bone label 1"
-        key="required"
-        required="true"
-      ></pl-rectangle-annotate>
-     <pl-rectangle-annotate
-        label="Bone label 2"
+        label="Bone label"
         key="required"
         required="true"
       ></pl-rectangle-annotate>
